# LemonenLang

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README.ru.md  builder.sh  calc.lmn  inter  myyap.cpp  new_inter.cpp  new_inter.s
examples_code/: calc.lmn  example_five.lmn  example_four.lmn  example_one.lmn  example_three.lmn  example_two.lmn  reg.lmn
include/: ast.hpp  lexer.hpp  parser.hpp  utf8_win.hpp
libs/: math_pro.lmn
libs/zykle/: a.lmn  b.lmn  zyklus.lmn
src/: ast.cpp  lexer.cpp  lmnlang.cpp  logic.h  main.cpp  manual.cpp  parser.cpp
