set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -flto=auto")
add_compile_options(-O3 -march=native -flto=auto)
cmake_minimum_required(VERSION 3.15)
project(lmnlang VERSION 2.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(PkgConfig REQUIRED)
find_library(READLINE_LIBRARY NAMES readline)
add_executable(lmnlang src/parser.cpp src/lexer.cpp src/main.cpp src/ast.cpp src/main.cpp )
if(READLINE_LIBRARY) 
    target_link_libraries(lmnlang PRIVATE ${READLINE_LIBRARY})
else()
    message(FATAL_ERROR "readline not found")
endif()
